# notes

./: cmd命令打印拷贝文件夹文件
C++常用函数/: Untitled-2.md  c++11新特性： 参数绑定  c++11新特性： 右值引用  c++11新特性：匿名函数  new  随机数.md
Markdown/: test.md
OpenRealm/: pose_estimation process  track  安装笔记  重要片段--地理参考初始化
Opencv/: mat使用.md
Opencv/Stitching源码分析/: calib3d.md  float数组转mat.md  投影变换.md
cuda/hello_cuda_2/: CMakeLists.txt
cuda/hello_cuda_2/cuda/: CMakeLists.txt  foo.cu  foo.cuh
cuda/helloworld/: CMakeLists.txt  kernel.cu  kernel.cuh  main.cpp
cuda/test_cuda_3/: CMakeLists.txt  ProcessPointClouds.h  main.cpp  tf_sampling_g.cu  tf_sampling_g.cuh
docker/: conda command not found  docker gpu  docker 安装  install.sh  ubuntu22.04安装cuda10.0  关于docker容器中使用numpy报错OpenBLAS
docker/command/: command.md
effective c++/02/: 02.code-workspace  CMakeLists.txt  main.cpp
effective c++/03/: CMakeLists.txt  main.cpp
maskformer/: maskformer.py方法.md  maskformer_fusion_head.md  mmdeploy-example.bat  mmdet-mmdeploy.bat  onnxruntime处理nchw和nhwc.md  概述.md
onnx/: tensorflow .ckpt .pb模型转onnx
图像拼接相关算法/: 旋转矩阵左乘右乘理解.md  等距投影.md
系统和安装命令/: conda环境  windows docker 使用  安装cuda  机房ip
